<resources>
    <string name="app_name">My Project</string>
    <string name="lets_start">Let’s Start!</string>
    <string name="start_now">Start Now</string>
    <string name="efficiently_and_effectively">efficiently and effectively</string>
    <string name="learn_at_home">Learn at home!</string>
    <string name="get_unlimited_access">Get unlimited access!</string>
    <string name="go_premium">Go Premium</string>
    <string name="_11_99">$11.99</string>
    <string name="per_month">per month</string>
    <string name="_143_99">$143.99</string>
    <string name="per_year">per year</string>
    <string name="_4_99">$4.99</string>
    <string name="_5_99">$5.99</string>
    <string name="yearly">Yearly</string>
    <string name="monthly">Monthly</string>
    <string name="email">Email:</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
</resources>