<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">


    <!-- Extract resource kısmında
    values- night ı o temada değişiklik yapmak istediğinizde seçersiniz.
     Seçmezseniz ikisindede aynı şeyi gösterir. -->

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="248dp"
        android:layout_height="237dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_start_image" />

    <TextView
        android:id="@+id/lets_start"
        style="@style/EntryTittleStyle"
        android:layout_width="167dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/lets_start"
        android:textSize="@dimen/entry_title_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
<!--android:ems="10" 10 karaktere kadar alması için kısıt getiriyor. -->
    <!--  android:paddingLeft="20dp"  soldan boşluk verir-->

    <EditText
        android:id="@+id/editTextTextPersonName"
        style="@style/StartInputStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lets_start" />

    <EditText
        android:id="@+id/editTextTextPassword"
        style="@style/StartInputStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:drawableRight="@drawable/ic_show_icon_password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <!-- android:backgroundTint="#2C2B47"  renk verip selector özelliğini korur. -->

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#2C2B47"
        android:fontFamily="@font/acme"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/acme"
        android:text="@string/dont_have_an_account"
        android:textColor="#B9B8C6"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="#2C2B47"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />




</androidx.constraintlayout.widget.ConstraintLayout>